# swiftray

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxygen  Info.plist  MacOSXBundleInfo.plist.in  Makefile  README.md  beambird.pro  classicUI.ini  classicsUI.ini  cmakeconfig.h.in  compile_and_run.sh  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  essentialUI.ini  graph_info.json  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  osxwindow.mm  qml.qrc  sparkle.qrc  svgpp_common.h  svgpp_impl.cpp  swiftray.pro  swiftray.qmlproject  vcanvas.cpp  vcanvas.h  vcontext.cpp  vcontext.h  vcpkg.json  vdoc.cpp  vdoc.h  vecty.pro  (+5 more)
canvas/: layer.h  (+4 more)
src/: CMakeLists.txt  clipboard.cpp  clipboard.h  command.cpp  command.h  constants.h  document-serializer.h  document-settings.h  document.cpp  document.h  globals.cpp  globals.h  layer.cpp  layer.h  main.cpp  main_application.cpp  main_application.h  undo.cpp  undo.h  vdoc.cpp  vdoc.h
src/canvas/: CMakeLists.txt  cache-stack.cpp  cache-stack.h  canvas.cpp  canvas.h  canvas_data.cpp  canvas_data.h  canvas_data.hpp  layer.cpp  layer.h  layer.hpp  memory_monitor.h  rect_drawer.cpp  rect_drawer.h  scene.cpp  scene.h  scene.hpp  transform_box.cpp  transform_box.hpp  vcanvas.cpp  vcanvas.h
src/common/: CMakeLists.txt  timestamp.cpp  timestamp.h
src/connection/: CMakeLists.txt  base-job.cpp  base-job.h  serial-job.cpp  serial-job.h  serial-port.cpp  serial-port.h  serialport-thread.cpp  serialport-thread.h
src/debug/: CMakeLists.txt  debug-timer.cpp  debug-timer.h
src/executor/: CMakeLists.txt  console_executor.cpp  console_executor.h  executor.cpp  executor.h  job_executor.cpp  job_executor.h  machine_setup_executor.cpp  machine_setup_executor.h  rt_status_update_executor.cpp  rt_status_update_executor.h
src/gcode/: gcode_generator.cpp  gcode_generator.h  toolpath-exporter.cpp  toolpath-exporter.h  toolpath_exporter.cpp  toolpath_exporter.h
src/machine/: CMakeLists.txt  machine-controller.cpp  machine-controller.h  machine.cpp  machine.h
src/machine_job/: framing_job.cpp  framing_job.h  gcode_job.cpp  gcode_job.h  machine_job.cpp  machine_job.h
src/motion_controller/: CMakeLists.txt  grbl-motion-controller.cpp  grbl_motion_controller.cpp  grbl_motion_controller.h  motion-controller.cpp  motion-controller.h  motion_controller.cpp  motion_controller.h  motion_controller_factory.cpp  motion_controller_factory.h
src/motion_controller_job/: CMakeLists.txt  base-job.cpp  base-job.h  grbl-job.cpp  grbl-job.h
src/osx/: CMakeLists.txt  disable-app-nap.h  disable-app-nap.mm
src/parser/: CMakeLists.txt  README.md  base_context.h  dxf_data.h  dxf_iface.cpp  dxf_iface.h  dxf_reader.cpp  dxf_reader.h  group_context.h  image_context.h  my-svg-functions.h  my-svg-helper.h  my-svg-types.h  my_qsvg_handler.cpp  my_qsvg_handler.h  my_qsvg_handler_qt6.cpp  my_qsvg_handler_qt6.h  pdf2svg.cpp  pdf2svg.h  qsvggraphics.cpp  qsvggraphics_p.h  qsvggraphics_p_qt6.h  qsvggraphics_qt6.cpp  reference_context.h  shape_context.h  stylable_context.h  svg_impl_3.cpp  svgpp-color-factory.h  svgpp-common.h  svgpp-defs.h  svgpp-external-impl.cpp  svgpp-impl.cpp  svgpp-parser.cpp  svgpp-parser.h  svgpp_color_factory.h  svgpp_color_factory.hpp  svgpp_common.h  svgpp_context.cpp  svgpp_context.h  svgpp_context.hpp  (+12 more)
src/periph/: CMakeLists.txt
src/server/: CMakeLists.txt  swiftray-server.cpp  swiftray-server.h
src/settings/: CMakeLists.txt  file-path-settings.cpp  file-path-settings.h  machine-settings.cpp  machine-settings.h  maintenance-controller.cpp  maintenance-controller.h  param-settings.cpp  param-settings.h  preset-settings.cpp  preset-settings.h  rotary-settings.cpp  rotary-settings.h
src/shape/: CMakeLists.txt  bitmap-shape.cpp  bitmap-shape.h  bitmap_shape.cpp  bitmap_shape.h  group-shape.cpp  group-shape.h  group_shape.cpp  group_shape.h  path-shape.cpp  path-shape.h  path_shape.cpp  path_shape.h  shape.cpp  shape.h  shape.hpp  text-shape.cpp  text-shape.h  text_shape.cpp  text_shape.h
src/toolpath_exporter/: CMakeLists.txt  toolpath-exporter-fcode.cpp  toolpath-exporter-fcode.h  toolpath-exporter.cpp  toolpath-exporter.h  toolpath-utils.cpp  toolpath-utils.h
src/utils/: CMakeLists.txt  software_update.c  software_update.cpp  software_update.h  sparkle_bridge.h  sparkle_bridge.m
src/widgets/: CMakeLists.txt  base-container.h  canvas-text-edit.cpp  canvas_text_edit.cpp  doc-settings-panel.h  doc-settings-panel.ui  font-panel.cpp  font-panel.h  font-panel.ui  gcode-player.cpp  gcode-player.h  gcode-player.ui  layer-list-item.cpp  layer-list-item.h  layer-list-item.ui  layer-params-panel.cpp  layer-params-panel.h  layer-params-panel.ui  layer_list_item.cpp  layer_list_item.h  layer_list_item.ui  layer_params_panel.cpp  layer_params_panel.h  layer_params_panel.ui  layer_widget.cpp  layer_widget.h  layer_widget.ui  preset-manager.cpp  preset-manager.h  preset-manager.ui  preview-window.cpp  preview-window.h  preview-window.ui  qfontcombobox2.cpp  qfontcombobox2.h  spinbox_helper.h  transform-panel.cpp  transform-panel.h  transform-panel.ui  transform_panel.cpp  (+5 more)
src/window/: main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  osxwindow.h  osxwindow.mm
src/windows/: CMakeLists.txt  about-window.cpp  about-window.h  about-window.ui  consoledialog.cpp  consoledialog.h  consoledialog.ui  gcode-panel.cpp  gcode-panel.h  gcode-panel.ui  gcode-player.cpp  gcode-player.h  gcode-player.ui  image-crop-dialog.cpp  image-crop-dialog.h  image-crop-dialog.ui  image-sharpen-dialog.cpp  image-sharpen-dialog.h  image-sharpen-dialog.ui  image-trace-dialog.cpp  image-trace-dialog.h  image-trace-dialog.ui  job-dashboard-dialog.cpp  job-dashboard-dialog.h  job-dashboard-dialog.ui  jogging-panel.cpp  jogging-panel.h  jogging-panel.ui  machine-manager.cpp  machine-manager.h  machine-manager.ui  machine-monitor.cpp  machine-monitor.h  machine-monitor.ui  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  new-machine-dialog.cpp  (+24 more)
tests/: CMakeLists.txt  main.cpp  test_canvas.h  test_gui.h
(+351 files in other folders)
